style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap');

@media screen and (max-width: 1600px) {
    body {
        zoom:0.96;
    }
}

* {
    user-select: none;
    color: rgba(222, 222, 229, 0.95);
    font-family: 'Roboto', sans-serif;
    letter-spacing: 0.03rem;
}

body, html {
    margin: 0;
    padding: 0;
}

body {
    background: rgb(5,36,60);
    background: linear-gradient(90deg, rgba(5,36,60,1) 0%, rgba(15,52,78,1) 51%, rgba(19,35,64,1) 100%);
    display:flex;
    flex-direction: column;
    padding:28px 0 0 0;
    text-align: center;
    justify-content: center;
}
.history {
    width:350px;
    height:170px;
    background:rgba(234, 239, 242, 0.85);
    position:absolute;
    right:100px;
    top:500px;
    padding:9px;
    border-radius: 5px;
    overflow: scroll;
    font-size:14px;
    scrollbar-width: none;
}
.history-text {
    color:rgba(0, 0, 0, 0.75);
    display:flex;
    margin-top:2px;
    margin-bottom:0;
    text-align: left;
}
.welcome-text {
    margin:auto auto;
    text-align: center;
    display: block;
    letter-spacing: 0.06rem;
    font-size: 15px;
    margin-bottom:12px;
}
::-webkit-scrollbar {
    width: 0px;
  }

.red {
    color: rgb(182 58 58) !important;
}
.wrapper {
    text-align: center;
    justify-content: center;
}
.container {
    margin: auto auto;
}

.hero-container {
    display: flex;
    justify-content: center;
}

.villain-container {
    display: flex;
    justify-content: center;
    margin-top:5px;
    margin-bottom:-15px;
}

.hero-dealer {
    display: flex;
    justify-content: center;
    align-items: flex-end;
    font-size: 30px;
    height: 26px;
    margin-left: 30%;
    visibility: hidden;
}

.villain-dealer {
    margin-top:14px;    
    font-size: 30px;
    height: 26px;
    /* margin-right: 100px; */
    margin-right: 30%;
}

.villain-table-graphics {
    height:107px;
}

.villain-leftbox {
    width:150px;
    margin: auto 0;
    text-align: end;
}
.villain-centerbox {
    width:130px;
    vertical-align: middle;
    height: 151px;
}
.villain-rightbox {
    width:150px;
    margin: auto 0;
    text-align: start;
}
.hero-leftbox {
    width:150px;
    margin: auto 0;
    text-align: end;
}
.hero-centerbox {
    width:130px;
    vertical-align: middle;
    height: 151px;
}
.hero-rightbox {
    width:150px;
    margin: auto 0;
    text-align: start;
}

.table-text {
    font-size: 24px;
    visibility: hidden;
    margin: 0 auto 30px auto;
    margin-top: -30px;
    /* text-shadow: 0 0 2px #0d6fd100, 0 0 4px #35c2e900; */
    letter-spacing: 0.08rem;
    opacity: 0.95;
}
.grey {
    color:rgba(128, 128, 128, 0.7) !important;
}
.button-bar {
    display: flex;
    display: none;
    justify-content: center;
    margin-top: 14px;
    height: 50px;
}
button {
    width:115px;
    height: 47px;
    border-radius: 4px;
    margin-right: 8px;
    margin-top:2px;
    border:none;
    outline: none;
    font-size: 0.87rem;
    cursor: pointer;
    background: rgb(186 48 48);
    transition: 0.15s;
    letter-spacing: 0.04rem;
}

button:hover {
   background: rgb(198, 56, 56);
}

.new-hand-btn {
    display: block;
    margin: auto;
    width: 121px;
    margin-top: -220px;
}

.table-container {
    margin: auto;
    height: 350px;
}

.table {
   width: 576px;
   height: 400px;
   border: 1px solid rgba(6, 10, 14, 0.5);
   border-radius: 60%;
   background: #152b3b;
   margin: 6px auto;
    position:relative;
    z-index:-1;
}
.table-logo {
    font-size: 32px;
    letter-spacing: 2px;
    width:100%;
    z-index:-1;
    opacity: 0;
    color:#203545ef;
    position: absolute;
    top:50%;
    left:50%;
    transform: translate(-50%,-50%);
}

.pot {
    margin-top: 14px;
    font-size: 17px;
    height: 26px;
    justify-content: center;
    align-items: center;
    text-align: center;
    letter-spacing: 0.03rem;
}

img {
    max-width: 96px;
}

#villain-card1, #villain-card2, #hero-card1, #hero-card2  {
    width: 60px;

}

.hero-strength {
    height: 24px;
    font-size: 14px;
    margin: auto 10px;

}

.villain-strength {
    font-size: 15px;
    margin:auto 10px;
    margin-top:-27px;
}  

.hero-stack, .villain-stack {
    height: 24px;
    font-size:18px;
    margin: 10px;
    letter-spacing: 0.05rem;
}

.card-container-hero {
    height:55px;
}

.card-container-villain {
    height: 60px;
}

.hero-current-bet{
    margin-top:50px;    
    font-size: 18px;
    height: 37px;
    letter-spacing: 0.03rem;
}
.villain-current-bet {
    letter-spacing: 0.03rem;
    font-size: 18px;
    height: 37px;
    margin-top: 8px;
    margin-bottom: -16px;
    visibility: visible;
}

.hero-current-action {
    font-size: 18px;
    visibility: hidden;
}

.villain-acting {
    font-size: 18px;
    height: 28px;
    visibility: hidden;
    margin: 6px;
}


#board-card1, #board-card2, #board-card3, #board-card4, #board-card5 {
    height:125px;
    margin-right: 3px;
}

.board-container {
    height: 100px;
}

#hero-image, #villain-image {
    margin-top: 5px;
    border-radius: 100%;
    border: 2px solid rgba(0, 0, 0, 0);
}

.villain-image-container {
    height: 72px;
}

/* GLOWING BORDER */
@-webkit-keyframes glow {
    to {
         border: 2px solid rgba(255, 255, 255, 0.9);
    -webkit-box-shadow: 0 0 3px white;
       -moz-box-shadow: 0 0 3px white;
            box-shadow: 0 0 3px white;
    }
    from {
        border: 2px solid rgba(210, 221, 215, 0.2);
        /* box-shadow: 0 0 0px white; */
    }
}
.glowing {
    /* border: 2px solid white;  */
    -webkit-animation: glow 0.8s infinite alternate;  
     -webkit-transition: border 0.8s linear, box-shadow 0.8s linear;
       -moz-transition: border 0.8s linear, box-shadow 0.8s linear;
            transition: border 0.8s linear, box-shadow 0.8s linear;
}

input {
    color:white;
    font-size: 16px;
    padding: 0;
    width: 55px;
    justify-content: start;
    align-items: center;
    text-align: center;
    margin-right: 15px;
    background: rgba(0,0,0,0.5)
}


/* # ###
/* SCREEN RESPONSIVENESS 
/* # ###*/

@media only screen and (min-width: 1750px) {
    .history {
        left:67%;
    }
}
@media only screen and (max-width: 1500px) {
    .history {
        right:50px;
    }
}

@media only screen and (max-width: 1250px) {
    .history {
        display:none;
    }
}

@media only screen and (min-height: 790px) {
    .history {
        top: 563px;
    }
    body {
        margin-top: 25px;
    }
}

@media only screen and (min-height: 850px) {
    .history {
        top: 603px;
    }
    body {
        margin-top: 65px;
    }
}
@media only screen and (min-height: 1050px) {
    .history {
        top: 703px;
    }
    body {
        margin-top: 165px;
    }
}
@media only screen and (min-height: 1250px) {
    .history {
        top: 803px;
    }
    body {
        margin-top: 265px;
    }
}

/* smaller width on small screen    */
@media only screen and (max-width: 600px) {
    @media only screen and (min-height: 695px) {
        body {
            margin-top: 75px;
        }
    }
    .table-text {
        font-size: 26px;
        margin-top: -30px;
    }
    .table {
       width: 425px;
       height: 335px;
       margin-top: -25px;
    }
    .hero-current-bet{
        margin-top:0px;    
    }
    .button-bar {
        margin-top: 4px;
        margin-bottom: 2px;
        align-items: center;
    }
    #villain-image {
        margin-top: 0px;
    }
    .top-margin-box {
        height: 0;
    }
    #board-card1, #board-card2, #board-card3, #board-card4, #board-card5 {
        height:100px;
    }
    #villain-card1, #villain-card2, #hero-card1, #hero-card2  {
        width: 55px;
    }
    .new-hand-btn{
        margin-top: -205px;
    }
    button {
        width:105px;
        height: 40px;
        margin-right: 5px;
        font-size: 14px;
    }
    html {
        overflow-x: hidden;
    }
    .hero-container{
        margin-top: -74px;
    }
    .hero-dealer {
        width: 20px;
        height: 20px;
    }
    .pot {
        margin-top: -9px;
    }
  }
  
@media only screen and (max-width: 430px) {
    @media only screen and (min-height: 675px) {
        body {
            margin-top: 75px;
        }
    }
    .table {
       margin-top: -40px;
       width:360px;
       height: 330px;
    }
    .table-text {
        margin-top: -44px;
        font-size: 26px;
    }
    
    .pot {
        margin-top: -27px;
    }
    .hero-dealer {
        width:20px;
        height:20px;
    }
    
    #villain-image {
        margin-top: 0px;
    }
    .hero-container{
        margin-top: -84px;
    }
    #board-card1, #board-card2, #board-card3, #board-card4, #board-card5 {
        height:90px;
    }
    #villain-card1, #villain-card2, #hero-card1, #hero-card2  {
        width: 47px;
    }
    
    .hero-current-bet{
        margin-top:0px;    
    }
    .button-bar {
        margin-top: 4px;
        margin-bottom: 1px;
        align-items: center;
    }
    .new-hand-btn{
        margin-top: -209px;
        width: 95px;
    }
    button {
        width:100px;
        height: 40px;
        margin-right: 5px;
        font-size: 14px;
    }
    .hero-strength {
        height: 20px;
        font-size: 13px;
    }
    .villain-strength {
        font-size: 13px;
        margin:auto;
    }  
}

